--- a/tpl/main_config.gohtml
+++ b/tpl/main_config.gohtml
@@ -3,21 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>1Password - Initial Configuration</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js" type="text/javascript"></script>
-    <style type="text/css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/apptheme.css">
 
-    </style>
 </head>
 <body>
     <div class="mainContainer">
-        <h1>Initial config!</h1>
-        {{.}}
+        <div class="container">
+            <div class="row">
+                <form class="initConfigForm">
+                    <h2 class="initConfigForm-heading">Specify Vault</h2>
+                    <label class="sr-only" for="inputVaultLoc">Vault Path</label>
+                    <input type="text" autofocus="true" required="" placeholder="Vault Path" class="form-control" id="inputVaultLoc" data-bind="value:$root.ds.main_location">
+                    <hr/>
+                    <button class="btn btn-success" data-bind="click:$root.validateVault">Validate/Save Vault Location</button>
+                    <h4>Vault Location: <span data-bind="text:$root.ds.main_location"></span></h4>
+                </form>
+
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">Initial config details</div>
+                <div class="panel-body">
+                    <p>We need to setup your initial configuration file so that it knows where to get your 1password vault.</p>
+                    <hr/>
+                    <p>Configuration data is stored in the following location:</p>
+                    <ul>
+                        <li>
+                            Linux / Mac: <pre>~/.config/Nitecon/1password.json</pre>
+                        </li>
+                        <li>
+                            Windows: <pre>%APPLOCALDATA/Nitecon/1password.json</pre>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <script src="/static/js/global/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="/static/js/global/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/static/js/global/knockout-min.js" type="text/javascript"></script>
+    <script src="/static/js/global/knockout.viewmodel.min.js" type="text/javascript"></script>
+    <script src="/static/js/global/utils.js" type="text/javascript"></script>
+    <script src="/static/js/pages/config.js" type="text/javascript"></script>
 </body>
+
 </html>
